workshop04/deploy-bear.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dov-bear-deploy
  labels:
    name: dov-bear-deploy
spec: 
  replicas: 2
  selector:
    matchLabels:
      name: dov-bear-po
  template:
    metadata: 
      name: dov-bear-po
      labels: 
        name: dov-bear-po
        dept: engineering
        allow-ingress-traffic: "yes"
    spec:
      containers:
        - name: dov-bear-container
          image: docker.io/chukmunnlee/dov-bear:v1
          imagePullPolicy: IfNotPresent
          ports: 
          - name: dov-port
            containerPort: 3000
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            # limit:
            #   memory: 256Mi
            #   cpu: 128m

---
apiVersion: v1
kind: Service
metadata:
  name: dov-bear-service
  labels:
    name: dov-bear-service
spec:
  type: ClusterIP
  selector:
    name: dov-bear-po
  ports:
  - port: 8080
    targetPort: dov-port

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dov-bear-ing
  labels:
    name: dov-bear-ing
    type: ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/limit-rps: "5"
spec:
  ingressClassName: nginx
  defaultBackend:
    service: 
      name: dov-bear-service
      port:
        number: 8080
  rules:
  - host: dov-bear.146.190.5.176.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:  
          service:
            name: dov-bear-service
            port: 
              number: 8080
